--- a/Glass Witch/Glass Witch.csproj
+++ b/Glass Witch/Glass Witch.csproj
@@ -67,6 +67,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectWithDataBase.cs" />
+    <Compile Include="DlaStalegoKlienta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DlaStalegoKlienta.Designer.cs">
+      <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StaliKlienciModel.cs" />
     <Compile Include="Start.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +100,9 @@
     <Compile Include="Zamowienie.Designer.cs">
       <DependentUpon>Zamowienie.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DlaStalegoKlienta.resx">
+      <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
     </EmbeddedResource>
