niby po offie SkładanieZamówienia ma się odpalić WprowadzanieNowego, ale coś mi nie poszło :C

--- a/Glass Witch/Glass Witch.csproj
+++ b/Glass Witch/Glass Witch.csproj
@@ -109,6 +109,9 @@
     <EmbeddedResource Include="DlaStalegoKlienta.resx">
       <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SkładanieZamówienia.resx">
+      <DependentUpon>SkładanieZamówienia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
     </EmbeddedResource>
