--- a/Glass Witch/Glass Witch.csproj
+++ b/Glass Witch/Glass Witch.csproj
@@ -53,6 +53,18 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="itextsharp, Version=5.5.8.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.pdfa, Version=5.5.8.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\itextsharp.pdfa.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.xtra, Version=5.5.8.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\itextsharp.xtra.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -72,6 +84,12 @@
     </Compile>
     <Compile Include="DlaStalegoKlienta.Designer.cs">
       <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PodsumowanieZamowienia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PodsumowanieZamowienia.Designer.cs">
+      <DependentUpon>PodsumowanieZamowienia.cs</DependentUpon>
     </Compile>
     <Compile Include="SkładanieZamówienia.cs">
       <SubType>Form</SubType>
@@ -120,6 +138,9 @@
     </Compile>
     <EmbeddedResource Include="DlaStalegoKlienta.resx">
       <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PodsumowanieZamowienia.resx">
+      <DependentUpon>PodsumowanieZamowienia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SkładanieZamówienia.resx">
       <DependentUpon>SkładanieZamówienia.cs</DependentUpon>
