--- a/Glass Witch/Glass Witch.csproj
+++ b/Glass Witch/Glass Witch.csproj
@@ -58,6 +58,15 @@
     <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="itextsharp">
+      <HintPath>.\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.pdfa">
+      <HintPath>.\itextsharp.pdfa.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp.xtra">
+      <HintPath>.\itextsharp.xtra.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -80,11 +89,6 @@
       <DependentUpon>CrystalReport1.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="DataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </Compile>
     <Compile Include="DlaStalegoKlienta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +106,12 @@
     </Compile>
     <Compile Include="PodsumowanieZamowienia.Designer.cs">
       <DependentUpon>PodsumowanieZamowienia.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PodsumowanieZamówienia1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PodsumowanieZamówienia1.Designer.cs">
+      <DependentUpon>PodsumowanieZamówienia1.cs</DependentUpon>
     </Compile>
     <Compile Include="SkładanieZamówienia.cs">
       <SubType>Form</SubType>
@@ -167,6 +177,9 @@
     <EmbeddedResource Include="PodsumowanieZamowienia.resx">
       <DependentUpon>PodsumowanieZamowienia.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PodsumowanieZamówienia1.resx">
+      <DependentUpon>PodsumowanieZamówienia1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SkładanieZamówienia.resx">
       <DependentUpon>SkładanieZamówienia.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,17 +215,6 @@
       <DependentUpon>Zamowienie.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
-    <None Include="DataSet1.xsc">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet1.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="DataSet1.xss">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
