--- a/Glass Witch/Glass Witch.csproj
+++ b/Glass Witch/Glass Witch.csproj
@@ -101,6 +101,12 @@
     <Compile Include="DlaStalegoKlienta.Designer.cs">
       <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
     </Compile>
+    <Compile Include="DodawanieProduktowDoBazy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodawanieProduktowDoBazy.Designer.cs">
+      <DependentUpon>DodawanieProduktowDoBazy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ilosc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,12 +124,6 @@
     </Compile>
     <Compile Include="PodsumowanieZamówienia1.Designer.cs">
       <DependentUpon>PodsumowanieZamówienia1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SkładanieZamówienia.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SkładanieZamówienia.Designer.cs">
-      <DependentUpon>SkładanieZamówienia.cs</DependentUpon>
     </Compile>
     <Compile Include="StaliKlienci.cs">
       <SubType>Form</SubType>
@@ -177,6 +177,9 @@
     <EmbeddedResource Include="DlaStalegoKlienta.resx">
       <DependentUpon>DlaStalegoKlienta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DodawanieProduktowDoBazy.resx">
+      <DependentUpon>DodawanieProduktowDoBazy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ilosc.resx">
       <DependentUpon>Ilosc.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,9 +188,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PodsumowanieZamówienia1.resx">
       <DependentUpon>PodsumowanieZamówienia1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SkładanieZamówienia.resx">
-      <DependentUpon>SkładanieZamówienia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StaliKlienci.resx">
       <DependentUpon>StaliKlienci.cs</DependentUpon>
@@ -248,6 +248,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LOGO.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
